rough idea for begin of discussion part

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -1,3 +1,7 @@
+% !TeX spellcheck = en_US
+
+Opposed to traditional VCSs (cf. Section \ref{sec:background:manage-versions:traditional-vcs}) the system presented in this thesis is not meant to support developers during the development process, but rather to assist other developers by building on existing models. ...
+
 \todo{}
 \begin{itemize}
 	\item Benchmarks/stats on database
