implemented most of the comments from VT

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -2,7 +2,7 @@
 
 Opposed to traditional VCSs (cf. Section \ref{sec:background:manage-versions:traditional-vcs}) the system presented in this thesis is not meant to support developers during the development process, but rather to assist other developers by building on existing models. ...
 
-\todo{}
+\todo{maybe pull last paragraph from db concept down here}
 \begin{itemize}
 	\item Benchmarks/stats on database
 		\subitem additional overhead (nodes/relations increase)
