added change suggestions from MS

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -78,7 +78,7 @@
 	\chapter{Outlook}
 	\input{outlook.tex}
 	
-	\nocite{*}
+	%\nocite{*}
 	%\bibliographystyle{apalike}
 	%\bibliographystyle{apacitep}
 	%\bibliographystyle{named}
