--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -6,10 +6,16 @@ By not relying on anybody specifically using this system, I was able to quickly 
 This test set was generated on 2016-10-14 from all publicly available workspaces in \emph{PMR2} and all releases from \emph{BioModels Database} (cf. Section \ref{sec:background:modelrepo}) using the \modelcrawler (cf. Section \ref{sec:impl:modelcrawler}).
 
 Being an analyzes platform and not a day-to-day tool sets different constraints. For instance access time becomes more crucial, whereby consumed drive space is less a concern.
-My implementation takes full advantage of this loosened space restriction, because I decided to neglect reverse delta storage to be able to easily query information about the delta. This decision might show some drawbacks with growing amount of models and versions.
+My implementation takes full advantage of this loosened space restriction.
+The storage structure, I decided on, does not make use of an efficient reverse-delta storage, as traditional VCS (cf. Section \ref{sec:background:manage-versions:traditional-vcs}). Instead each model is stored completely for multiple reasons: it allows for a very lose coupling to the base \masymos implementation, meaning the diff-extension is additive to the features of \masymos and does not require for intrusive changes of the code base. Further the core functionality of \masymos, providing a full text and structural search index, is not interrupted, so if required each version of a model can be treated as single instance. Resulting in easier structural analyses per model version and less expensive operations on the indexes, when inserting a new model version.
+
+On the other hand the complete storage of each model increases the database size significantly. But to keep the scope of this work concise and the implementation reasonable, I focused on a good data interlinkage and less on a storage efficient data model.
+
+This decision might show some drawbacks with growing amount of models and versions.
 First issue to consider would be higher storage consumption. But also slower query execution should be considered.
 Secondly \bives creates multiple changes, which have a single common source. For instance adding a \texttt{Species} will result in at least five changes. These include the insertion of the element itself and the insertion of the attributes \texttt{id}, \texttt{name}, \texttt{initialConcentration}, and \texttt{compartment} reference.
 Storing this many borderline redundant changes is increasing the overall size dramatically.
+
 Both issues could be improved or even solved by using a database design with less redundancies. This means in relation to the first point, to implement the database as reverse-delta storage, accepting all the mentioned drawbacks.
 In the second issue less redundancies could be archived by grouping changes, which clearly share the same origin.
 
