removed bullet list from discussion chapter

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -27,7 +27,7 @@ Mentioned information could also be conceived by coupling this project with an e
 
 \todo{find a nice ending?}
 
-\todo{maybe pull last paragraph from db concept down here}
+\begin{comment}
 \begin{itemize}
 	\item Benchmarks/stats on database
 		\subitem additional overhead (nodes/relations increase)
@@ -37,3 +37,4 @@ Mentioned information could also be conceived by coupling this project with an e
 		\subitem reason and intention not able to be automatically determined
 		\subitem possible extension?
 \end{itemize}
+\end{comment}
