removed force of border spacings, now using the default of the book class

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = en_US
 \documentclass[12pt, a4paper, titlepage]{book}
-\usepackage[a4paper, margin=3cm]{geometry}
+%\usepackage[a4paper, margin=3cm]{geometry}
 %\usepackage{setspace}
 %\setstretch{1.5}
 
