--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -16,6 +16,8 @@
 \usepackage{caption}
 \usepackage{comment} 
 \usepackage{listings}
+\usepackage{csvsimple}
+\usepackage{longtable}
 
 \usepackage{amssymb}
 \usepackage{amsmath}
