minor improvements on the node+relation table

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -67,8 +67,11 @@
 \end{figure}
 
 \chapter{Overview of Node- and Relationship types}
+\todo{tables are ugly as hell...}
+\todo{write introduction thingy, where these numbers are coming from}
+
 \section{Graphical Overview}
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth,height=0.5\textheight,keepaspectratio]{resources/neo4j-renders/large-test-meta-graph.pdf}
 	\caption{Overview of all used node types and relations between them}
@@ -77,16 +80,16 @@
 
 \section{List of all used Node types}
 \begin{longtable}{ l r }
-	\hline \bfseries Node Label & \bfseries No. of Nodes \\\hline \endhead
+	\hline \bfseries Node Label & \bfseries No. of occurrence \\\hline \endhead
 	\csvreader[head to column names]{resources/neo4j-renders/large-test-meta-graph-nodes.csv}{} %
 	{\expUScore{\label} & \count \\} %
-	\hline
+	%\hline
 \end{longtable}
 
 \section{List of all used Relationship types}
-\begin{longtable}{ l c r }
+\begin{longtable}{ l c r r }
 	\hline \bfseries Source Node Label & \bfseries Relationship Type & \bfseries Destination Node Label \\\hline \endhead %
-	\csvreader[]{resources/neo4j-renders/large-test-meta-graph-edges-expanded.csv}{Source=\sourceNode,Target=\targetNode,label=\relLabel} %
-	{\expUScore{\sourceNode} & \expUScore{\relLabel} & \expUScore{\targetNode} \\} %
-	\hline
+	\csvreader[]{resources/neo4j-renders/large-test-meta-graph-edges-expanded.csv}{Source=\sourceNode,Target=\targetNode,label=\relLabel,count=\count} %
+	{\expUScore{\sourceNode} & \expUScore{\relLabel} & \expUScore{\targetNode}\\} %
+	%\hline
 \end{longtable}
