--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -15,6 +15,7 @@
 \usepackage{color}
 \usepackage{caption}
 \usepackage{comment} 
+\usepackage{float}
 \usepackage{listings}
 \usepackage{csvsimple}
 \usepackage{longtable}
